Update ChatbotTest.java